--- a/index.html
+++ b/index.html
@@ -5,10 +5,122 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>PlatziMovies</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Dosis:wght@700;800&family=Red+Hat+Display:wght@400;500&display=swap"
+			rel="stylesheet"
+		/>
 		<link rel="stylesheet" href="./styles/app.css" />
 	</head>
 	<body>
-		<h1>PlatziMovies</h1>
+		<header class="header-container" id="header">
+			<span class="header-arrow-inactive">&lt;</span>
+			<h1 class="header-title">Platzi Movies</h1>
+			<h1 class="header-title header-title--categoryView inactive">Acción</h1>
+			<form id="seachForm" class="header-searchForm">
+				<input type="text" placeholder="Vengadores" />
+				<button>🔍</button>
+			</form>
+		</header>
+
+		<section class="trendingPreview-container" id="trendingPreview">
+			<div class="trendingPreview-header">
+				<h2 class="trendingPreview--title">Tendencias</h2>
+				<button class="trendingPreview-btn">Ver más</button>
+			</div>
+			<article class="trendingPreview-movieList">
+				<!-- <div class="movie-container">
+					<img
+						src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg"
+						alt=""
+						class="movie-img"
+					/>
+				</div> -->
+			</article>
+		</section>
+
+		<section id="categoriesPreview" class="categoriesPreview-container">
+			<h2 class="categoryPreview-title">Categorías</h2>
+			<article class="categoriesPreview-list">
+				<!-- <div class="category-container">
+					<h3 class="category-title" id="id28">Romance</h3>
+				</div> -->
+			</article>
+		</section>
+
+		<section id="genericList" class="genericList-container inactive">
+			<div class="movie-container">
+				<img
+					src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg"
+					alt="Nombre de la pelicula"
+					class="movie-img"
+				/>
+			</div>
+			<div class="movie-container">
+				<img
+					src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg"
+					alt=""
+					class="movie-img"
+				/>
+			</div>
+			<div class="movie-container">
+				<img
+					src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg"
+					alt=""
+					class="movie-img"
+				/>
+			</div>
+		</section>
+
+		<section class="movieDetail-container inactive" id="movieDetail">
+			<h1 class="movieDetail-title">Deadpool</h1>
+			<span class="movieDetail-score">7.6</span>
+			<p class="movieDetail-description">
+				Wisecracking mercenary Deadpool battles the evil and powerful Cable and
+				other bad guys to save a boy's life.
+			</p>
+			<article class="categories-list">
+				<div class="category-container">
+					<h3 class="category-title" id="id28">Romance</h3>
+				</div>
+				<div class="category-container">
+					<h3 class="category-title" id="id16">Drama</h3>
+				</div>
+				<div class="category-container">
+					<h3 class="category-title" id="id14">Acción</h3>
+				</div>
+			</article>
+			<article class="relatedMovies-container">
+				<h2 class="relatedMovies-title">Películas similares</h2>
+
+				<div class="relatedMovies-scrollContainer">
+					<div class="movie-container">
+						<img
+							src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg"
+							alt="Nombre de la pelicula"
+							class="movie-img"
+						/>
+					</div>
+					<div class="movie-container">
+						<img
+							src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg"
+							alt=""
+							class="movie-img"
+						/>
+					</div>
+					<div class="movie-container">
+						<img
+							src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg"
+							alt=""
+							class="movie-img"
+						/>
+					</div>
+				</div>
+			</article>
+		</section>
+		<footer>Hecho con amor, curso api practico platzi 💚</footer>
+		<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 		<script src="./src/main.js" type="module"></script>
 	</body>
 </html>
