--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 	</head>
 	<body>
 		<header class="header-container" id="header">
-			<span class="header-arrow-inactive">&lt;</span>
+			<span class="header-arrow inactive">&lt;</span>
 			<h1 class="header-title">Platzi Movies</h1>
 			<h1 class="header-title header-title--categoryView inactive">Acción</h1>
-			<form id="seachForm" class="header-searchForm">
+			<form id="searchForm" class="header-searchForm">
 				<input type="text" placeholder="Vengadores" />
-				<button>🔍</button>
+				<button id="searchBtn">🔍</button>
 			</form>
 		</header>
 
