app finished, fixed minor css bugs

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<h1 class="header-title header-title--categoryView inactive">Acción</h1>
 			<form id="searchForm" class="header-searchForm">
 				<input type="text" placeholder="Vengadores" />
-				<button id="searchBtn">🔍</button>
+				<button id="searchBtn" type="button">🔍</button>
 			</form>
 		</header>
 
@@ -41,7 +41,7 @@
 		</section>
 
 		<section id="categoriesPreview" class="categoriesPreview-container">
-			<h2 class="categoryPreview-title">Categorías</h2>
+			<h2 class="categoriesPreview-title">Categorías</h2>
 			<article class="categoriesPreview-list">
 				<!-- <div class="category-container">
 					<h3 class="category-title" id="id28">Romance</h3>
